<resources>
    <string name="app_name">Salesman_tracker1</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="dropped_pin">DROPPED PIN</string>
    <string name="source">Source *</string>
    <string name="destination">Destination *</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_reset">Reset</string>
    <string name="contactpersonname">Contact Person Name: *</string>
    <string name="PersonEmailId">Person Email-Id: *</string>
    <string name="PersonMobileNumber">Person Mobile Number: *</string>
    <string name="AlternateMobileNumber">Alternate Mobile Number:</string>
    <string name="Country">Country: *</string>
    <string name="State">State *</string>
    <string name="ShopAddressZipCode">Shop Address Zip Code(Regional): *</string>
    <string name="PermanentAddress">Permanent Address: *</string>
    <string name="SameasPermanentAddress">Same as Permanent Address</string>
    <string name="btn_add">Add</string>
    <string name="route">Route: *</string>
    <string name="shop">Shop *</string>
    <string name="OnDate">On Date: *</string>
    <string name="Salesman">Salesman: *</string>
    <string name="WaitingTime">Waiting Time (Per Shop in Min): *</string>
    <string name="PersonFirstName">Person First Name: *</string>
    <string name="PersonLastName">Person Last Name: *</string>
    <string name="PersonBirthDate">Person Birth Date: *</string>
    <string name="Gender">Gender: *</string>
    <string name="PersonStatus">Person Status: *</string>
    <string name="BankDetails">Bank Details</string>
    <string name="PersonAccountNo">Person Account No:</string>
    <string name="BankIFSC">Bank IFSC:</string>
    <string name="Branch">Branch:</string>
    <string name="City">City *</string>
</resources>
